[ADD] : add the new app_frontend
Signed-off-by: Yasser-Jemli <yasserjamli37@gmail.com>

--- a/App-frontend/src/app/app.component.html
+++ b/App-frontend/src/app/app.component.html
@@ -1,3 +1,8 @@
+<!--<app-headers></app-headers>  Static header 
+
+<main>
+  <router-outlet></router-outlet> -- Routed content 
+</main>-->
 <app-headers></app-headers> <!-- Static header -->
 
 <main style="padding-bottom: 100px;"> <!-- espace en bas pour le chatbot -->
