--- a/App-frontend/src/app/headers/headers.component.html
+++ b/App-frontend/src/app/headers/headers.component.html
@@ -14,22 +14,25 @@
     <!-- Manager view: only show Users Posted, View Profile, and Log out -->
     <ng-container *ngIf="isLoggedIn() && isManager(); else nonManagerNav">
       <div class="profile-dropdown">
-        <button class="nav-button" (click)="showMenu = !showMenu" type="button">
-          Welcome : {{ getUsername() }}
+        <button class="nav-button" (click)="showMenu = !showMenu" type="button">{{ getUsername() }}
         </button>
         <ul class="dropdown-list" *ngIf="showMenu">
-          <li><a routerLink="/profile" (click)="showMenu = false">View Profile</a></li>
-          <li><a (click)="logout(); showMenu = false">Log out</a></li>
+          <li>
+            <a routerLink="/manager-profile" (click)="showMenu = false">View Profile</a>
+          </li>
+          <li>
+            <a (click)="logout(); showMenu = false">Log out</a>
+          </li>
         </ul>
       </div>
-      <button class="nav-button" routerLink="/showCV">Users Posted</button>
+      <button class="nav-button" routerLink="/showCVuser">Users Posted</button>
+      <button class="nav-button" routerLink="/Mypost">My post</button>
     </ng-container>
 
     <!-- Non-manager navigation -->
     <ng-template #nonManagerNav>
       <div class="profile-dropdown" *ngIf="isLoggedIn()">
-        <button class="nav-button" (click)="showMenu = !showMenu" type="button">
-          Welcome : {{ getUsername() }}
+        <button class="nav-button" (click)="showMenu = !showMenu" type="button">log in : {{ getUsername() }}
         </button>
         <ul class="dropdown-list" *ngIf="showMenu">
           <li><a routerLink="/profile" (click)="showMenu = false">View Profile</a></li>
