--- a/App-frontend/src/app/user-profile/user-profile.component.html
+++ b/App-frontend/src/app/user-profile/user-profile.component.html
@@ -87,9 +87,9 @@
           </ul>
         </div>
 
-        <!-- Delete Profile Button -->
-        <button class="btn btn-outline-danger w-100 mt-4" (click)="deleteMyProfile()">
-          <i class="bi bi-trash"></i> Delete my profile
+        <!-- Update Password Button -->
+        <button class="btn btn-outline-primary w-100 mt-4" (click)="updatePassword()">
+          <i class="bi bi-key"></i> update password
         </button>
       </div>
     </div>
