--- a/App-frontend/src/app/updatepassword-manager/updatepassword-manager.component.html
+++ b/App-frontend/src/app/updatepassword-manager/updatepassword-manager.component.html
@@ -2,18 +2,18 @@
   <div class="row justify-content-center">
     <div class="col-md-6 col-lg-4">
       <div class="card shadow-sm p-4">
-        <h2 class="text-center mb-4">Nouveau mot de passe</h2>
+        <h2 class="text-center mb-4">Set New password</h2>
         <form [formGroup]="passwordForm" (ngSubmit)="onSubmit()">
           <!-- Nouveau mot de passe -->
           <div class="mb-3">
-            <label for="newPassword" class="form-label">Nouveau mot de passe</label>
+            <label for="newPassword" class="form-label">New password</label>
             <div class="input-group">
               <input
                 [type]="showPassword ? 'text' : 'password'"
                 id="newPassword"
                 class="form-control"
                 formControlName="newPassword"
-                placeholder="Entrez le nouveau mot de passe"
+                placeholder="new Password"
                 [class.is-invalid]="newPassword?.invalid && (newPassword?.dirty || newPassword?.touched)"
                 aria-describedby="newPasswordError"
               />
@@ -34,20 +34,20 @@
             >
               <div *ngIf="newPassword?.errors?.['required']">Ce champ est requis.</div>
               <div *ngIf="newPassword?.errors?.['minlength']">
-                Minimum 6 caractères requis.
+                Min 6 char.
               </div>
             </div>
           </div>
 
           <!-- Confirmer le mot de passe -->
           <div class="mb-3">
-            <label for="confirmPassword" class="form-label">Confirmer le mot de passe</label>
+            <label for="confirmPassword" class="form-label">Confirm the password</label>
             <input
               [type]="showPassword ? 'text' : 'password'"
               id="confirmPassword"
               class="form-control"
               formControlName="confirmPassword"
-              placeholder="Confirmez le mot de passe"
+              placeholder="Confirm the password"
               [class.is-invalid]="confirmPassword?.invalid && (confirmPassword?.dirty || confirmPassword?.touched) || passwordForm.errors?.['passwordMismatch']"
               aria-describedby="confirmPasswordError"
             />
