integration with backend

--- a/App-frontend/src/app/gestion-managers/gestion-managers.component.html
+++ b/App-frontend/src/app/gestion-managers/gestion-managers.component.html
@@ -33,9 +33,9 @@
       <th>Password</th>
       <th>Action</th>
       <th>
-        <label for="roleFilter"><strong>Filtrer par rôle :</strong></label>
+        <label for="roleFilter"><strong>Filter by role:</strong></label>
         <select id="roleFilter" [(ngModel)]="selectedRole" (change)="onRoleFilterChange(selectedRole)">
-          <option value="ALL">Tous</option>
+          <option value="ALL">All</option>
           <option value="MANAGER">Managers</option>
           <option value="CANDIDATE">Candidats</option>
         </select>
