--- a/App-frontend/src/app/chat-assistant/chat-assistant.component.html
+++ b/App-frontend/src/app/chat-assistant/chat-assistant.component.html
@@ -23,6 +23,6 @@
 
   <div class="chatbot-input d-flex">
     <input [(ngModel)]="userInput" (keydown.enter)="sendMessage()" placeholder="Écrivez ici..." class="form-control me-2" />
-    <button (click)="sendMessage()" class="btn btn-primary">Envoyer</button>
+    <button (click)="sendMessage()" class="btn btn-primary">send</button>
   </div>
 </div>
