--- a/App-frontend/src/app/headers/headers.component.html
+++ b/App-frontend/src/app/headers/headers.component.html
@@ -2,7 +2,7 @@
   <div class="logo-section">
     <div class="logo">
       <a routerLink="/home">
-        <img src="../../assets/logo.png" alt="ESPRIT Logo" class="logo-img">
+        <img src="../../assets/1logo.png" alt="ESPRIT Logo" class="logo-img">
       </a>
     </div>
   </div>
