--- a/App-frontend/src/app/chat-assistant/chat-assistant.component.html
+++ b/App-frontend/src/app/chat-assistant/chat-assistant.component.html
@@ -8,12 +8,11 @@
   <div class="chatbot-header" (click)="toggleChat()">Assistant ✖</div>
 
   <div class="chatbot-body" #chatBody>
-    <div *ngFor="let msg of messages" 
-         [ngClass]="{ 'msg-left': msg.sender === 'Bot', 'msg-right': msg.sender === 'Vous' }" 
-         class="chat-bubble">
+    <div *ngFor="let msg of messages" [ngClass]="{ 'msg-left': msg.sender === 'Bot', 'msg-right': msg.sender === 'Vous' }" class="chat-bubble">
       <div class="bubble-content">
         <strong>{{ msg.sender }}</strong>
         <div>{{ msg.text }}</div>
+        <audio *ngIf="msg.audioUrl" [src]="msg.audioUrl" controls></audio>
       </div>
     </div>
 
@@ -23,11 +22,7 @@
   </div>
 
   <div class="chatbot-input d-flex">
-    <input [(ngModel)]="userInput" 
-           (keydown.enter)="sendMessage()" 
-           placeholder="Écrivez ici..." 
-           class="form-control me-2" />
+    <input [(ngModel)]="userInput" (keydown.enter)="sendMessage()" placeholder="Écrivez ici..." class="form-control me-2" />
     <button (click)="sendMessage()" class="btn btn-primary">send</button>
   </div>
 </div>
-
